--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage</title>
+<title>sisoltero.github.io/Net Art</title>
+<style>
+body {
+  background-color: DeepSkyBlue
+}
+
+h1 {
+  color: LightBlue;
+  text-align: center;
+  font-family: Bahnschrift Condensed;
+  font-size: 30px;
+  }
+  
+  p {
+  color: LightBlue;
+  text-align: center;
+  font-family: Bahnschrift Condensed;
+  font-size: 32px;
+}
+</style>
 </head>
-<body style="background-color:LemonChiffon;">
+<body>
 
-<h1 style="color:Violet;">I Don't Know How You Got Here, But Welcome Friend! </h1>
-<p style="color:DarkMagenta;">A fun space for all the dudes, darlings, and degenerates.</p>
-<p><a href="page_2.html">Another cute lizard</a></p>
-<img src="/desktop/code/d&d_familiars_feasting.jpeg" alt="" style="width:601px;height:546px;">
-<p><a href="page_3.html">This is the end. </a></p>
+<h1>There is a willow grows aslant a brook. </h1>
+<hr>
 
-</body>
+<img src="../Net Art/1 of 10 image.jpeg" alt=" " style="width:600px; height:700px;">
+
+<p>That shows his hoar leaves in the glassy stream. </p>
+
+<p><a href="2nd page.html">Once it starts, it won't stop. </a></p>
+
+</body>	
 </html>
+
+
+
+ 
