--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1 {
 <h1>There is a willow grows aslant a brook. </h1>
 <hr>
 
-<img src="../Net Art/1 of 10 image.jpeg" alt=" " style="width:600px; height:700px;">
+<p align=center><img src="1 of 10 image.jpg" alt=" " style="width:333px; height:497px;">
 
 <p>That shows his hoar leaves in the glassy stream. </p>
 
