--- a/glitch_images.html
+++ b/glitch_images.html
@@ -32,5 +32,9 @@ h1 {
 <p>Death.</p>
 <p align=center><img src="Art74_Note+_Glitch_Image_3.jpg" alt=" " width="600px" height="500px">
 
+
+<p><a href="../Bootstrap/Bootstrap.html">Portfolio index. </a></p>
+
+
 </body>
 </html>
