--- a/index.html
+++ b/index.html
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>sisoltero.github.io/Net Art</title>
-<style>
-body {
-  background-color: DeepSkyBlue
-}
-
-h1 {
-  color: LightBlue;
-  text-align: center;
-  font-family: Bahnschrift Condensed;
-  font-size: 30px;
-  }
-  
-  p {
-  color: LightBlue;
-  text-align: center;
-  font-family: Bahnschrift Condensed;
-  font-size: 32px;
-}
-</style>
+<title>sisoltero.github.io/3_linked_pages_Homepage</title>
 </head>
-<body>
+<body style="background-color:LemonChiffon;">
 
-<h1>There is a willow grows aslant a brook. </h1>
-<hr>
+<h1 style="color:Violet;">I Don't Know How You Got Here, But Welcome Friend! </h1>
+<p style="color:DarkMagenta;">A fun space for all the dudes, darlings, and degenerates.</p>
+<p><a href="page_2.html">Another cute lizard pic! Click here.</a></p>
+<img src="d&d_familiars_feasting.jpg" alt="" style="width:601px;height:546px;">
+<p><a href="page_3.html">This is the end. </a></p>
 
-<p align=center><img src="1 of 10 image.jpg" alt=" " style="width:333px; height:497px;">
 
-<p>That shows his hoar leaves in the glassy stream. </p>
+<p><a href="../Bootstrap/Bootstrap.html">Portfolio index. </a></p>
 
-<p><a href="2nd page.html">Once it starts, it won't stop. </a></p>
 
-</body>	
+</body>
 </html>
-
-
-
- 
